--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 
     <footer>
       <p>Simbulele Tauzeni. All Rights Reserved.</p>
+      <a href="https://github.com/Simbulele2024">
+        <img src="github.png" alt="github Icon" height="40">
+    </a>
+    <a href="https://www.instagram.com/simbulele_tauzeni?igsh=b2h3eHJ3c2o1MG5v">
+        <img src="instagram.png" alt="instagram Icon" height="40">
+    </a>
+    <a href="https://wa.me/qr/GDDQ3S6IMNGFB1">
+        <img src="whatsapp.png" alt="whatsapp Icon" height="40">
+    </a>
     </footer>
 
     <script src="script.js"></script>
