--- a/contacts.html
+++ b/contacts.html
@@ -73,13 +73,14 @@
                         <label for="lname">Last Name</label>
                         <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
 
-                        <label for="inquiry">Inquiry</label>
+                        <label for="inquiry">Services</label>
                         <select id="inquiry" name="inquiry">
                             <option value="Automation Testing">Automation Testing</option>
                             <option value="Web Design">Web Design</option>
                             <option value="Software Testing">Software Testing</option>
                             <option value="Enterprise Architecture">Enterprise Architecture</option>
                             <option value="Junior Cybersecurity Analyst">Junior Cybersecurity Analyst</option>
+                            <option value="AWS Cloud Computing">AWS Certified Cloud Practitioner</option>
                         </select>
 
                         <label for="subject">Subject</label>
