--- a/projects.html
+++ b/projects.html
@@ -25,3 +25,46 @@
             </ul>
         </nav>
     </header>
+
+    <!-- -----Projects---------- -->
+    <div id="projects">
+        <div class="container">
+            <h1 class="sub-title">Projects</h1>
+            <div class="projects-list">
+                <div class="w3-row-padding">
+                    <div class="w3-third">
+                        <h2>Konnect</h2>
+                        <p>Stay Konnected on anything and everything digital</p>
+                        <a href="https://sinazod.github.io/KONNECT.WEBSITE/WEBSITE/">
+                            <img src="logo.jfif" alt="Konnect Project" height="200px">
+                        </a>
+                    </div>
+                </div>
+                <div class="w3-row-padding">
+                    <div class="w3-third">
+                        <h2>Scientific Calculator</h2>
+                        <a href="https://simbulele2024.github.io/Calculator-/">
+                            <img src="OIP.jpg" alt="Scientific Calculator Project" height="200px">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <footer>
+        <p>Simbulele Tauzeni. All Rights Reserved.</p>
+        <div class="social-links">
+            <a href="https://github.com/Simbulele2024">
+                <img src="github.png" alt="GitHub Icon" height="40">
+            </a>
+            <a href="https://www.instagram.com/simbulele_tauzeni?igsh=b2h3eHJ3c2o1MG5v">
+                <img src="instagram.png" alt="Instagram Icon" height="40">
+            </a>
+            <a href="https://wa.me/qr/GDDQ3S6IMNGFB1">
+                <img src="whatsapp.png" alt="WhatsApp Icon" height="40">
+            </a>
+        </div>
+    </footer>
+</body>
+</html>
