--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                                             Develop and implement responsive design principles to ensure optimal user experience across various devices.
                                             Design visually appealing and user-friendly websites based on clients' specifications and industry best practices.
                                         </p>
-                                        <a href="#">Learn more</a>
+                                        <a href="contacts.html">Learn more</a>
                                     </div>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                                             Develop and execute comprehensive test plans, test cases, and test scripts to ensure the quality of software applications.
                                             Design and implement automated testing frameworks to streamline repetitive testing processes and enhance overall test coverage.
                                         </p>
-                                        <a href="#">Learn more</a>
+                                        <a href="contacts.html">Learn more</a>
                                     </div>
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                                             Enterprise-level system design and planning.
                                             Integration and alignment of IT systems with business objectives.
                                         </p>
-                                        <a href="#">Learn more</a>
+                                        <a href="contacts.html">Learn more</a>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                             Conduct routine vulnerability assessments to identify weaknesses in systems and applications.
                                             Implement and maintain cybersecurity measures.
                                         </p>
-                                        <a href="#">Learn more</a>
+                                        <a href="contacts.html">Learn more</a>
                                     </div>
                                 </div>
                             </div>
